--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-pandas
-folium
-streamlit
-streamlit-folium
+streamlit>=1.40.0
+pandas>=2.2.0
+folium>=0.17.0
+streamlit-folium>=0.21.0
+altair<5.0.0
